--- a/VideoWriter.ipynb
+++ b/VideoWriter.ipynb
@@ -24,9 +24,7 @@
     "from keras.models import model_from_json\n",
     "from tensorflow.keras.preprocessing import image\n",
     "\n",
-    "#load model\n",
     "model = model_from_json(open(\"fer.json\", \"r\").read())\n",
-    "#load weights\n",
     "model.load_weights('fer.h5')\n",
     "\n",
     "\n",
@@ -37,7 +35,7 @@
     "\n",
     "\n",
     "while True:\n",
-    "    ret,test_img=cap.read()# captures frame and returns boolean value and captured image\n",
+    "    ret,test_img=cap.read(),
     "    if not ret:\n",
     "        continue\n",
     "    gray_img= cv2.cvtColor(test_img, cv2.COLOR_BGR2GRAY)\n",
@@ -47,7 +45,7 @@
     "\n",
     "    for (x,y,w,h) in faces_detected:\n",
     "        cv2.rectangle(test_img,(x,y),(x+w,y+h),(0,0,0),thickness=2)\n",
-    "        roi_gray=test_img[y:y+w,x:x+h]#cropping region of interest i.e. face area from  image\n",
+    "        roi_gray=test_img[y:y+w,x:x+h],
     "        roi_gray=cv2.resize(roi_gray,(48,48))\n",
     "        img_pixels = image.img_to_array(roi_gray)\n",
     "        img_pixels = np.expand_dims(img_pixels, axis = 0)\n",
