--- a/VideoWriter.ipynb
+++ b/VideoWriter.ipynb
@@ -46,7 +46,7 @@
     "\n",
     "    for (x,y,w,h) in faces_detected:\n",
     "        cv2.rectangle(test_img,(x,y),(x+w,y+h),(0,0,0),thickness=2)\n",
-    "        roi_gray=test_img[y:y+w,x:x+h]#cest i.e. face area from  image\n",
+    "        roi_gray=test_img[y:y+w,x:x+h]\n",
     "        roi_gray=cv2.resize(roi_gray,(48,48))\n",
     "        img_pixels = image.img_to_array(roi_gray)\n",
     "        img_pixels = np.expand_dims(img_pixels, axis = 0)\n",
