--- a/VideoWriter.ipynb
+++ b/VideoWriter.ipynb
@@ -25,8 +25,8 @@
     "from tensorflow.keras.preprocessing import image\n",
     "\n",
     "\n",
-    "model = model_from_json(open(\"fer.json\", \"r\").read())\n",
-    "model.load_weights('fer.h5')\n",
+    "model = model_from_json(open(\"basic_model.json\", \"r\").read())\n",
+    "model.load_weights('basic_model.h5')\n",
     "\n",
     "\n",
     "face_haar_cascade = cv2.CascadeClassifier('haarcascade_frontalface_default.xml')\n",
